--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
+    <link rel="stylesheet" href="style.css">
     <head>
+        <meta charset="UTF-8" />
         <title>
-            Patrick Kelley, GIT
+            Patrick M. Kelley, GIT
         </title>
     </head>
     <body>
-        <h1>Patrick Kelley, GIT</h1>
-        <p>This is the personal website of Patrick Kelley</p>
+        <h1>Patrick M. Kelley, GIT</h1>
+        <p>This is the personal website of Patrick Kelley
+        </p>
+        <div class="pages"></div>
+        <a href="about.html">About</a>
+        </div>
     </body>
 </html>
