--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </p>
         <div class="pages"></div>
         <a href="about.html">About</a>
+        <a href="resume.html">Resume</a>
         </div>
     </body>
 </html>
