--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Patrick M. Kelley, GIT</h1>
         <p>This is the personal website of Patrick Kelley
         </p>
-        <div class="pages"></div>
+        <div style="text-align:center">
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         </div>
